[gd_scene load_steps=23 format=3 uid="uid://bqqgyqafm7xwp"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_4dej5"]
[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="1_ahusb"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="2_onms2"]
[ext_resource type="PackedScene" uid="uid://dbb5xpyaqtabg" path="res://objects/player2.tscn" id="3_h6wf4"]
[ext_resource type="Script" path="res://scripts/view.gd" id="5_bg0fr"]
[ext_resource type="PackedScene" uid="uid://cvi3hcfcx2i4y" path="res://objects/player3.tscn" id="5_iouns"]
[ext_resource type="PackedScene" uid="uid://cxdv7j65grgtw" path="res://objects/player4.tscn" id="6_kmckp"]
[ext_resource type="PackedScene" uid="uid://cnymdajj1vsqm" path="res://objects/platform.tscn" id="6_sdmev"]
[ext_resource type="PackedScene" uid="uid://rjh4ifidqrfp" path="res://objects/platform_medium.tscn" id="7_ixpj3"]
[ext_resource type="PackedScene" uid="uid://uqr4hswv6d2g" path="res://objects/platform_grass_large_round.tscn" id="8_4oh1e"]
[ext_resource type="PackedScene" uid="uid://c8up71en5djgm" path="res://objects/platform_falling.tscn" id="9_2fnpo"]
[ext_resource type="PackedScene" uid="uid://dbmkur7544e82" path="res://flag.tscn" id="9_7cwka"]
[ext_resource type="PackedScene" uid="uid://dtjvjdjl8cs6e" path="res://models/flag.glb" id="9_fw1f5"]
[ext_resource type="PackedScene" uid="uid://dfpisimsgf5ce" path="res://objects/coin.tscn" id="10_fwhys"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="11_apvpm"]
[ext_resource type="PackedScene" uid="uid://dy017k58p20sk" path="res://objects/cloud.tscn" id="13_drtpy"]
[ext_resource type="Texture2D" uid="uid://cd7oyc56ehkx1" path="res://sprites/coin.png" id="13_jfda3"]
[ext_resource type="PackedScene" uid="uid://dm50h2jgg80ae" path="res://scoreboard.tscn" id="16_b3edp"]
[ext_resource type="PackedScene" uid="uid://drfm7u2n3wjp2" path="res://scenes/initialsentry.tscn" id="16_xrl3q"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="17_tk810"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dc4vf"]
size = Vector3(0.524902, 1.32788, 0.881348)

[sub_resource type="LabelSettings" id="LabelSettings_38ys3"]
font = ExtResource("17_tk810")
font_size = 48
shadow_color = Color(0, 0, 0, 0.376471)
shadow_offset = Vector2(2, 2)

[node name="Main" type="Node3D"]
script = ExtResource("1_4dej5")

[node name="SpwanPositions" type="Node3D" parent="."]

[node name="Player1SpwanPoint" type="Node3D" parent="SpwanPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966093, 0)

[node name="Player2SpwanPoint" type="Node3D" parent="SpwanPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.52018, 0.975401, -0.0382817)

[node name="Player3SpwanPoint" type="Node3D" parent="SpwanPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39905, 0.971792, -3.0304)

[node name="Player4SpwanPoint" type="Node3D" parent="SpwanPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.514249, 1.00559, -3.0304)

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_ahusb")

[node name="Player" parent="." node_paths=PackedStringArray("view", "spawn_position") instance=ExtResource("2_onms2")]
view = NodePath("../GridContainer/PlayerViewportContainer1/SubViewport/View")
spawn_position = NodePath("../SpwanPositions/Player1SpwanPoint")

[node name="Player2" parent="." node_paths=PackedStringArray("spawn_position") instance=ExtResource("3_h6wf4")]
transform = Transform3D(1, 0, 2.98023e-08, 2.98023e-08, 1, 2.98023e-08, 2.98023e-08, 0, 1, 2.53042, 0.5, -1.19209e-07)
player_id = 2
spawn_position = NodePath("../SpwanPositions/Player2SpwanPoint")

[node name="Player3" parent="." node_paths=PackedStringArray("spawn_position") instance=ExtResource("5_iouns")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.45973, 0.5, -2.9203)
player_id = 3
spawn_position = NodePath("../SpwanPositions/Player3SpwanPoint")

[node name="Player4" parent="." node_paths=PackedStringArray("spawn_position") instance=ExtResource("6_kmckp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.529137, 0.525764, -2.88738)
player_id = 4
spawn_position = NodePath("../SpwanPositions/Player4SpwanPoint")

[node name="World" type="Node3D" parent="."]

[node name="platform" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, 0, 0, 0)

[node name="platform5" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, 2.45548, 0, 0)

[node name="platform6" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, 2.45548, 0, -3)

[node name="platform7" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, -0.54452, 0, -3)

[node name="platform4" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.993085, 0, -0.117399, 0, 1, 0, 0.117399, 0, 0.993085, -15, 0, 4)

[node name="platform2" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, -3)

[node name="platform3" parent="World" instance=ExtResource("6_sdmev")]
transform = Transform3D(0.966237, 0, -0.257656, 0, 1, 0, 0.257656, 0, 0.966237, -3, 3, -5)

[node name="platform-medium" parent="World" instance=ExtResource("7_ixpj3")]
transform = Transform3D(0.996134, 0, 0.0878512, 0, 1, 0, -0.0878512, 0, 0.996134, -3, 0, 0)

[node name="platform-medium2" parent="World" instance=ExtResource("7_ixpj3")]
transform = Transform3D(0.995121, 0, 0.0986598, 0, 1, 0, -0.0986598, 0, 0.995121, -5, 0, 4)

[node name="platform-medium4" parent="World" instance=ExtResource("7_ixpj3")]
transform = Transform3D(0.929796, 0, -0.368076, 0, 1, 0, 0.368076, 0, 0.929796, -14.9422, 0.991941, 0.128304)

[node name="platform-medium3" parent="World" instance=ExtResource("7_ixpj3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -6)

[node name="platform-falling" parent="World" instance=ExtResource("9_2fnpo")]
transform = Transform3D(0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, -9, 0.419294, 4)

[node name="platform-falling2" parent="World" instance=ExtResource("9_2fnpo")]
transform = Transform3D(0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, -12, -0.315063, 4)

[node name="platform-falling3" parent="World" instance=ExtResource("9_2fnpo")]
transform = Transform3D(0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -11.7527, 1.8303, -2.30579)

[node name="platform-grass-large-round" parent="World" instance=ExtResource("8_4oh1e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 1, -2)

[node name="flag" parent="World" instance=ExtResource("9_fw1f5")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 3.48077, -6)
visible = false

[node name="flag2" parent="World" instance=ExtResource("9_7cwka")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 3.481, -6)

[node name="flagcolision" type="Area3D" parent="World/flag2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00315189, 0.17724, -0.0138445)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/flag2/flagcolision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0168457, 0.667603, 0.275146)
shape = SubResource("BoxShape3D_dc4vf")

[node name="coin" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.635, 0)

[node name="coin10" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.635, 4)

[node name="coin2" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -0.33003)

[node name="coin3" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -1.33003)

[node name="coin5" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7731, 2.54941, -2.28223)

[node name="coin6" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8111, 1.6888, 0.328574)

[node name="coin7" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.8111, 2.6888, 0.328574)

[node name="coin8" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9647, 0.801836, 3.99354)

[node name="coin9" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -6)

[node name="coin4" parent="World" instance=ExtResource("10_fwhys")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.0437, 1.97005, -2.33003)

[node name="cube8" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5495, 1.10741, -5.356)

[node name="cube9" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.27593, -0.401864, 0.422933, 0.471408, 1.30937, -0.178025, -0.343721, 0.304009, 1.32582, 3.33538, 1.37146, -6.8832)

[node name="cube10" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.32811, 0.370441, 0.259369, -0.293866, 1.3186, -0.37854, -0.34372, 0.30401, 1.32582, -10.5752, 2.03819, -7.93707)

[node name="cube11" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(0.476646, 0.924607, 0.941422, -0.929853, 0.945559, -0.457882, -0.93624, -0.468385, 0.934042, -11.1815, 2.03819, 9.2812)

[node name="cube12" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(-1.02876, -0.695523, 0.652886, -0.929853, 0.945557, -0.457881, -0.213027, -0.768461, -1.15432, -10.9158, 2.79508, 11.515)

[node name="cube13" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -14.3045, 2.03819, -8.24191)

[node name="cube14" parent="World" instance=ExtResource("13_drtpy")]
transform = Transform3D(1.56209, -1.37982, 1.71508, 1.97375, 1.80907, -0.342241, -0.974547, 1.4522, 2.05595, -15.866, 2.03819, 7.83702)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerViewportContainer1" type="SubViewportContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="GridContainer/PlayerViewportContainer1"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="initialsentry1" parent="GridContainer/PlayerViewportContainer1/SubViewport" node_paths=PackedStringArray("scoreboard") instance=ExtResource("16_xrl3q")]
visible = false
scoreboard = NodePath("../scoreboard1")

[node name="scoreboard1" parent="GridContainer/PlayerViewportContainer1/SubViewport" instance=ExtResource("16_b3edp")]
visible = false

[node name="HUD" type="CanvasLayer" parent="GridContainer/PlayerViewportContainer1/SubViewport"]
script = ExtResource("11_apvpm")

[node name="Icon" type="TextureRect" parent="GridContainer/PlayerViewportContainer1/SubViewport/HUD"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_jfda3")

[node name="x" type="Label" parent="GridContainer/PlayerViewportContainer1/SubViewport/HUD"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Coins" type="Label" parent="GridContainer/PlayerViewportContainer1/SubViewport/HUD"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")

[node name="View" type="Node3D" parent="GridContainer/PlayerViewportContainer1/SubViewport" node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../../../../Player")

[node name="Camera" type="Camera3D" parent="GridContainer/PlayerViewportContainer1/SubViewport/View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="PlayerViewportContainer2" type="SubViewportContainer" parent="GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="GridContainer/PlayerViewportContainer2"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="initialsentry2" parent="GridContainer/PlayerViewportContainer2/SubViewport" node_paths=PackedStringArray("scoreboard") instance=ExtResource("16_xrl3q")]
visible = false
scoreboard = NodePath("../scoreboard2")

[node name="scoreboard2" parent="GridContainer/PlayerViewportContainer2/SubViewport" instance=ExtResource("16_b3edp")]
visible = false

[node name="HUD2" type="CanvasLayer" parent="GridContainer/PlayerViewportContainer2/SubViewport"]
script = ExtResource("11_apvpm")

[node name="Icon" type="TextureRect" parent="GridContainer/PlayerViewportContainer2/SubViewport/HUD2"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_jfda3")

[node name="x" type="Label" parent="GridContainer/PlayerViewportContainer2/SubViewport/HUD2"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Coins2" type="Label" parent="GridContainer/PlayerViewportContainer2/SubViewport/HUD2"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")

[node name="View2" type="Node3D" parent="GridContainer/PlayerViewportContainer2/SubViewport" node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../../../../Player2")

[node name="Camera" type="Camera3D" parent="GridContainer/PlayerViewportContainer2/SubViewport/View2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="PlayerViewportContainer3" type="SubViewportContainer" parent="GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="GridContainer/PlayerViewportContainer3"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="initialsentry3" parent="GridContainer/PlayerViewportContainer3/SubViewport" node_paths=PackedStringArray("scoreboard") instance=ExtResource("16_xrl3q")]
visible = false
scoreboard = NodePath("../scoreboard3")

[node name="scoreboard3" parent="GridContainer/PlayerViewportContainer3/SubViewport" instance=ExtResource("16_b3edp")]
visible = false

[node name="HUD3" type="CanvasLayer" parent="GridContainer/PlayerViewportContainer3/SubViewport"]
script = ExtResource("11_apvpm")

[node name="Icon" type="TextureRect" parent="GridContainer/PlayerViewportContainer3/SubViewport/HUD3"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_jfda3")

[node name="x" type="Label" parent="GridContainer/PlayerViewportContainer3/SubViewport/HUD3"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Coins2" type="Label" parent="GridContainer/PlayerViewportContainer3/SubViewport/HUD3"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")

[node name="View3" type="Node3D" parent="GridContainer/PlayerViewportContainer3/SubViewport" node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../../../../Player3")

[node name="Camera" type="Camera3D" parent="GridContainer/PlayerViewportContainer3/SubViewport/View3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="PlayerViewportContainer4" type="SubViewportContainer" parent="GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="GridContainer/PlayerViewportContainer4"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="initialsentry4" parent="GridContainer/PlayerViewportContainer4/SubViewport" node_paths=PackedStringArray("scoreboard") instance=ExtResource("16_xrl3q")]
visible = false
scoreboard = NodePath("../scoreboard4")

[node name="scoreboard4" parent="GridContainer/PlayerViewportContainer4/SubViewport" instance=ExtResource("16_b3edp")]
visible = false

[node name="HUD4" type="CanvasLayer" parent="GridContainer/PlayerViewportContainer4/SubViewport"]
script = ExtResource("11_apvpm")

[node name="Icon" type="TextureRect" parent="GridContainer/PlayerViewportContainer4/SubViewport/HUD4"]
offset_left = 57.0
offset_top = 67.0
offset_right = 313.0
offset_bottom = 323.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("13_jfda3")

[node name="x" type="Label" parent="GridContainer/PlayerViewportContainer4/SubViewport/HUD4"]
offset_left = 112.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 123.0
text = "×"
label_settings = SubResource("LabelSettings_38ys3")

[node name="Coins2" type="Label" parent="GridContainer/PlayerViewportContainer4/SubViewport/HUD4"]
offset_left = 144.0
offset_top = 64.0
offset_right = 368.0
offset_bottom = 123.0
text = "0"
label_settings = SubResource("LabelSettings_38ys3")

[node name="View4" type="Node3D" parent="GridContainer/PlayerViewportContainer4/SubViewport" node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("5_bg0fr")
target = NodePath("../../../../Player4")

[node name="Camera" type="Camera3D" parent="GridContainer/PlayerViewportContainer4/SubViewport/View4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="MiniViewportContainer" type="SubViewportContainer" parent="GridContainer"]
visible = false
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="GridContainer/MiniViewportContainer"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="Node3D" type="Node3D" parent="GridContainer/MiniViewportContainer/SubViewport"]

[node name="Camera" type="Camera3D" parent="GridContainer/MiniViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6.89101, 40.6657, -0.947161)
current = true
fov = 40.0

[connection signal="coin_collected" from="Player" to="GridContainer/PlayerViewportContainer1/SubViewport/HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Player2" to="GridContainer/PlayerViewportContainer2/SubViewport/HUD2" method="_on_player_2_coin_collected"]
[connection signal="coin_collected" from="Player3" to="GridContainer/PlayerViewportContainer3/SubViewport/HUD3" method="_on_player_3_coin_collected"]
[connection signal="coin_collected" from="Player4" to="GridContainer/PlayerViewportContainer4/SubViewport/HUD4" method="_on_player_4_coin_collected"]
[connection signal="body_entered" from="World/flag2/flagcolision" to="Player" method="_on_flagcolision_body_entered"]
[connection signal="body_entered" from="World/flag2/flagcolision" to="Player2" method="_on_flagcolision_body_entered"]
[connection signal="body_entered" from="World/flag2/flagcolision" to="Player3" method="_on_flagcolision_body_entered"]
[connection signal="body_entered" from="World/flag2/flagcolision" to="Player4" method="_on_flagcolision_body_entered"]
